# auction-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc
auction/: auction.cc  auction.h  call_auction.cc  call_auction.h
data/: csv_market_data_source.cc  csv_market_data_source.h  data_reader.cc  data_reader.h  data_simulator.h  data_simulator.tpp  event_processor.cc  event_processor.h  market_data_source.h  market_data_source_factory.cc  market_data_source_factory.h  market_event.h  order_simulator.cc  order_simulator.h
engine/: order_book.cc  order_book.h
include/types/: event.h  order.h  trade.h
model/: convertor.h  order.h  order_book.cc  order_book.h  tick.h  trade.h
tests/: CMakeLists.txt  call_auction_test.cc  data_test.cc  event_processor_test.cc  loop_queue_test.cc  order_book_test.cc
utils/: loop_queue.h  loop_queue.tpp  safe_queue.cc  safe_queue.h  safe_queue.hpp  safe_queue.tpp
